Fix navbar overflow

--- a/src/component/navbar/style.scss
+++ b/src/component/navbar/style.scss
@@ -20,8 +20,13 @@ nav {
   }
 
   & > .nav-container {
+    overflow: auto;
+    scrollbar-width: thin;
+
     & > .nav-elements {
       & > .element {
+        max-width: unset;
+
         & > .nav-items {
           & > .nav-item {
             display: flex;
